fixed a css issue on mobile, also now we trim commands of whitespace

--- a/src/app.css
+++ b/src/app.css
@@ -71,7 +71,7 @@ input {
   border: none;
   background-color: unset;
   color:rgb(238, 238, 238);
-  width: 40%;
+  width: 15vw;
   padding: 0;
   margin: 0;
   margin-top: -1px;
